2007-09-13  Federico Mena Quintero  <federico@novell.com>

	* lib/config.py.in (DIRECTORIES_TO_IGNORE): Argh!  Add a missing
	comma in the list of strings; this is why .fontconfig and .beagle
	were not getting ignored.

2007-08-23  Federico Mena Quintero  <federico@novell.com>

	Fix http://bugzilla.gnome.org/show_bug.cgi?id=461110 - some
	strings are hard to translate (especially in the OpenOffice.org
	module).

	* admin-tool/lockdown/maindialog.py:
	* admin-tool/lockdown/pessulus.glade:
	* lib/protosession.py:
	* lib/sources/paneldelegate.py:
	* lib/userdb.py: Use better strings for translation.

==================== 2.19.2 ====================

2007-08-14  Federico Mena Quintero  <federico@novell.com>

	Released sabayon-2.19.2.

	* lib/config.py.in (DIRECTORIES_TO_IGNORE): Ignore .wapi,
	.fontconfig, .gstreamer-0.10.

2007-08-14  Federico Mena Quintero  <federico@novell.com>

	* admin-tool/sabayon.desktop.in (Categories): Remove
	"Application", add "GTK".  Patch by Christian Kirbach
	<Christian.Kirbach@googlemail.com>; fixes
	http://bugzilla.gnome.org/show_bug.cgi?id=417608

2007-08-14  Federico Mena Quintero  <federico@novell.com>

	* configure.ac: Bumped version number to 2.19.2.

	* NEWS: Updated.

2007-08-14  Federico Mena Quintero  <federico@novell.com>

	* configure.ac: Add a requirement for pygobject 2.12.0 or later
	for pygobject.filename_display_name().

	* lib/sources/filessource.py (FilesChange.get_short_description):
	Convert the filename to UTF-8 before generating a string for
	display.  Patch by Will Lachance <wrlach@gmail.com>.  Fixes
	http://bugzilla.gnome.org/show_bug.cgi?id=320968

2007-08-13  Federico Mena Quintero  <federico@novell.com>

	* lib/sources/paneldelegate.py (PanelDelegate.__init__): Fix
	"Appliction" typo.  Patch by Baris Cicek
	<baris@teamforce.name.tr>; fixes
	http://bugzilla.gnome.org/show_bug.cgi?id=463177

2007-08-13  Federico Mena Quintero  <federico@novell.com>

	* admin-tool/sabayon-apply: Import our config module.
